Whitelist validator test and added use cases for the ReferentialIntegrityValidator